<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>
        <import type="org.udacity.android.arejas.recipes.utils.Utils"/>
        <variable
            name="recipeStep"
            type="org.udacity.android.arejas.recipes.domain.entities.RecipeStep" />
        <variable
            name="navigator"
            type="org.udacity.android.arejas.recipes.presentation.ui.interfaces.NavigationInterface" />
        <variable
            name="nextDetailId"
            type="Integer" />
        <variable
            name="prevDetailId"
            type="Integer" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/step_loading_layout"
            layout="@layout/layout_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_outer_big"
            android:orientation="vertical"/>

        <include
            android:id="@+id/step_error_layout"
            layout="@layout/layout_error"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_outer_big"
            android:orientation="vertical"/>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/step_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/step_nopreview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/backgroundVideoColor"
                style="@style/textInfo"
                android:text="@string/no_preview"
                android:gravity="center_vertical|center_horizontal"
                android:textColor="#FFFFFF"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
                app:layout_constraintLeft_toLeftOf="parent" />

            <ImageView
                android:id="@+id/step_thumbnail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/margin_inner"
                android:contentDescription="@string/thumbnail_content_description"
                android:scaleType="fitCenter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:src="@drawable/step"/>

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/step_player"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@id/horizontal_divider"
                app:layout_constraintLeft_toLeftOf="parent"
                tools:visibility="gone"/>

            <android.support.constraint.Guideline
                android:id="@+id/horizontal_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="256dp" />

            <ScrollView
                android:id="@+id/step_scroll_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/margin_inner"
                app:layout_constraintTop_toBottomOf="@id/horizontal_divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/bt_step_previous">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/margin_inner_big"
                    android:layout_marginStart="@dimen/margin_inner_big">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_step_title"
                        android:layout_marginTop="@dimen/margin_inner_big"
                        android:textAlignment="center"
                        style="@style/textTitle"
                        android:singleLine="false"
                        app:textUnderline="@{recipeStep.shortDescription}"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="Recipe step instruction" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_step_listed"
                        android:layout_marginTop="@dimen/margin_inner_big"
                        android:textAlignment="textStart"
                        style="@style/textInfo"
                        android:singleLine="false"
                        app:text="@{recipeStep.description}"
                        app:layout_constraintTop_toBottomOf="@id/tv_step_title"
                        tools:text="This is a test about how it works to show the description of a recipe stem." />
                    
                </android.support.constraint.ConstraintLayout>

            </ScrollView>

            <Button
                android:id="@+id/bt_step_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_inner_big"
                android:layout_marginBottom="@dimen/margin_inner_big"
                style="@style/button"
                android:text="@string/previous"
                app:layout_constraintTop_toBottomOf="@id/step_scroll_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:onClick="@{() -> navigator.onLoadFragment(prevDetailId)}" />

            <Button
                android:id="@+id/bt_step_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_inner_big"
                android:layout_marginBottom="@dimen/margin_inner_big"
                style="@style/button"
                android:text="@string/next"
                app:layout_constraintTop_toBottomOf="@id/step_scroll_view"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:onClick="@{() -> navigator.onLoadFragment(nextDetailId)}" />

        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

</layout>