...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_inner_big"
            android:contentDescription="@string/serving_content_description"
            android:maxLines="3"
            android:ellipsize="end"
            android:text="@{(safeUnbox(isIngredientElement)  ? @string/ingredients_list : ((listItemName != null) ? listItemName : @string/unknown_step))}"
            android:textAlignment="textStart"
            style="@style/textInfo"
            app:layout_constraintBottom_toTopOf="@id/iv_details_type"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_details_type"
            app:layout_constraintTop_toBottomOf="@id/iv_details_type"
...
